<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_depan"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="128dp"
            android:maxWidth="128dp"
            android:src="@drawable/logo"
            android:layout_marginTop="24dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="P A R T N E R"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_marginBottom="24dp"
            android:textColor="@color/text_white"
            android:textStyle="bold"
            android:layout_marginTop="12dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:layout_marginTop="32dp"
            android:background="@color/editText"
            android:padding="12dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/akun_icon"
                android:adjustViewBounds="true"
                android:maxWidth="20dp"
                android:maxHeight="20dp"/>
            <EditText
                android:id="@+id/et_username_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/hint_username"
                android:paddingLeft="12dp"
                android:gravity="left"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/text_white"
                android:textColorHint="@color/text_white"
                android:textSize="14sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/editText"
            android:padding="12dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/password_icon"
                android:adjustViewBounds="true"
                android:maxWidth="20dp"
                android:maxHeight="20dp"/>
            <EditText
                android:id="@+id/et_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/hint_password"
                android:paddingLeft="12dp"
                android:gravity="left"
                android:textColor="@color/text_white"
                android:inputType="textPassword"
                android:textColorHint="@color/text_white"
                android:textSize="14sp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_login"
            android:textStyle="bold"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:background="@color/text_color"
            android:padding="8dp"
            android:textSize="18sp"
            android:textColor="@color/text_button"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dont_have_an_account"
            android:textColor="@android:color/white"
            android:layout_marginTop="24dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@android:color/white"/>
            <TextView
                android:id="@+id/register_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv_register"
                android:textColor="@color/text_color"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>