<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_depan"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="128dp"
            android:maxWidth="128dp"
            android:src="@drawable/logo"
            android:layout_marginTop="24dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="P A R T N E R"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_marginBottom="24dp"
            android:textColor="@color/text_white"
            android:textStyle="bold"
            android:layout_marginTop="12dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_code_activation"
            android:gravity="center"
            android:textColor="@color/text_white"
            android:layout_marginTop="24dp"
            android:textSize="14sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:background="@color/editText"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/et_activation_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/text_white"
                android:background="@android:color/transparent"
                android:hint="@string/hint_activation_code"
                android:textColorHint="@color/text_white"
                android:textSize="18sp"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="5"/>
        </LinearLayout>
        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_activation_code"
            android:textStyle="bold"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:background="@color/text_color"
            android:padding="8dp"
            android:textSize="18sp"
            android:textColor="#191970"/>
    </LinearLayout>
</RelativeLayout>