<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_depan"
    tools:context=".LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="128dp"
            android:maxWidth="128dp"
            android:src="@drawable/logo"
            android:layout_marginTop="24dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="P A R T N E R"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="@color/text_white"
            android:layout_marginBottom="16dp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="32dp"
            android:background="@color/editText"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="20dp"
                android:maxWidth="20dp"
                android:src="@drawable/akun_icon" />

            <EditText
                android:id="@+id/et_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="left"
                android:hint="@string/hint_full_name"
                android:paddingLeft="12dp"
                android:textColor="@color/text_white"
                android:textColorHint="@color/text_white"
                android:textSize="14sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:background="@color/editText"
            android:padding="8dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/akun_icon"
                android:adjustViewBounds="true"
                android:maxWidth="20dp"
                android:maxHeight="20dp"/>
            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/hint_username"
                android:paddingLeft="12dp"
                android:gravity="left"
                android:textColor="@color/text_white"
                android:textColorHint="@color/text_white"
                android:textSize="14sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:background="@color/editText"
            android:padding="8dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/email_icon"
                android:adjustViewBounds="true"
                android:maxWidth="20dp"
                android:maxHeight="20dp"/>
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/hint_email"
                android:paddingLeft="12dp"
                android:gravity="left"
                android:textColor="@color/text_white"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/text_white"
                android:textSize="14sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:background="@color/editText"
            android:padding="8dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/password_icon"
                android:adjustViewBounds="true"
                android:maxWidth="20dp"
                android:maxHeight="20dp"/>
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/hint_password"
                android:paddingLeft="12dp"
                android:gravity="left"
                android:textColor="@color/text_white"
                android:inputType="textPassword"
                android:textColorHint="@color/text_white"
                android:textSize="14sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:background="@color/editText"
            android:padding="8dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/password_icon"
                android:adjustViewBounds="true"
                android:maxWidth="20dp"
                android:maxHeight="20dp"/>
            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/hint_confirm_password"
                android:paddingLeft="12dp"
                android:gravity="left"
                android:textColor="@color/text_white"
                android:inputType="textPassword"
                android:textColorHint="@color/text_white"
                android:textSize="14sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/editText"
            android:padding="8dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phone_black_24dp"
                android:tint="@color/text_color"
                android:adjustViewBounds="true"/>
            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/hint_phone_number"
                android:paddingLeft="12dp"
                android:gravity="left"
                android:textColor="@color/text_white"
                android:inputType="number"
                android:textColorHint="@color/text_white"
                android:textSize="14sp"/>
        </LinearLayout>
        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_register"
            android:textStyle="bold"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:background="@color/text_color"
            android:padding="8dp"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/text_button"/>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>